--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -62,9 +62,9 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
 
 # Taxonomies.
 [taxonomies]
-  tag = "tags"
-  category = "categories"
+  tag = "tag"
+  category = "category"
   publication_type = "publication_types"
-  author = "authors"
+  author = "author"
 
-uglyurls = true
+uglyurls = "true"
