--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -63,8 +63,9 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
 
 # Taxonomies.
 [taxonomies]
-  tag = "tag"
-  category = "category"
+  tag = "tags"
+  category = "categories"
   publication_type = "publication_types"
-  author = "author"
-
+  author = "authors"
+[permalinks]
+    categories = "/:slug/"
