--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -68,4 +68,4 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
   publication_type = "publication_types"
   author = "authors"
 [permalinks]
-    categories = "/category:slug/"
+    categories = "/category/:slug/"
